# universal-mcp-client

./: .gitignore  README.md  main.py  pyproject.toml
src/adapters/: prompt_generator.py
src/config/: security.py  settings.py
src/core/: connection.py  server_manager.py  universal_client.py
src/discovery/: server_profiler.py
src/intelligence/: query_router.py  workflow_planner.py
src/utils/: exceptions.py  log_config.py
