[project]
name = "universal-mcp-client"
version = "0.1.0"
description = "Universal MCP client with server introspection and dynamic adaptation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
Copy
dependencies = [
    "azure-identity>=1.23.1",
    "azure-keyvault-secrets>=4.10.0",
    "mcp>=1.12.2",
    "openai>=1.97.1",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
strict = true
